--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     ">Lorem ipsum dolor sit.</p>
   </li>
   <li>
-    <h3 class="article">Lorem, ipsum dolor.</h3>
-    <p class="sup-article
-    ">Lorem ipsum dolor sit.</p>
+ <h3 class="article">Lorem, ipsum dolor.</h3>                
+<p class="sup-article">Lorem ipsum dolor sit.</p>
   </li>
   <li>
   <h3 class="article">Lorem, ipsum dolor.</h3>
@@ -54,23 +53,23 @@
   </ul>
 <h2 class="wwad-article">What we are doing?</h2>
 <ul class="list">
-  <li><a href=""><img src="./images/img1.png" alt="photo"></a></li>
-   <li><a href=""><img src="./images/img2.jpg" alt="photo"></a></li>
- <li><a href=""><img src="./images/img0.jpg" alt="photo"></a></li>
+  <li><a href=""><img src="img1.png" alt="photo"></a></li>
+   <li><a href=""><img src="img2.jpg" alt="photo"></a></li>
+ <li><a href=""><img src="img0.jpg" alt="photo"></a></li>
 </ul>
 </section>
 <section class="our-team-list">
     <h2 class="our-team">Our team</h2>
     <ul class="list">
-       <li><a href=""><img src="./images/card1.png" alt="man"></a></li>   
-       <li> <a href=""><img src="./images/card2.png" alt="woman"></a></li>
-       <li><a href=""><img src="./images/card3.png" alt="man"></a></li>     
-      <li><a href=""><img src="./images/card4.png" alt="man"></a></li>
+       <li><a href=""><img src="card1.png" alt="man"></a></li>   
+       <li> <a href=""><img src="card2.png" alt="woman"></a></li>
+       <li><a href=""><img src="card3.png" alt="man"></a></li>     
+      <li><a href=""><img src="card4.png" alt="man"></a></li>
     </ul>
 </section>
 </main>
 <footer class="site-footer"> 
-    <a href="./index.html"><img src="./images/WebStudio.svg" alt="WebStudio Logo"></a>
+    <a href="./index.html"><img src="WebStudio.svg" alt="WebStudio Logo"></a>
  <ul class="list">
 <li><a class="link" href="https://maps.app.goo.gl/42FeBoory7JgVYwk7">Velyka Vasylkivska</a></li> 
 <li><a class="link" href="tel:+380111111111">+380111111111</a> </li>
