--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header-info">
-        <a class="site-logo" href="./index.html"><img src="./images/WebStudio.svg" alt="WebStudio logo"></a>
+        <a class="site-logo" href="./index.html"><img src="WebStudio.svg" alt="WebStudio logo"></a>
       <nav>
         <ul class="site-navigation list">
             <li><a class="link" href="#">Contacts</a></li>
@@ -33,20 +33,20 @@
       </section>
       <section>
         <ul class="project-list list">
-      <li class="project-list__item"><a href="#"><img src="images/project 1.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 2.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 3.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 4.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 5.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 6.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 7.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 8.png" width="370" alt=""></a></li>
-      <li class="project-list__item"><a href="#"><img src="images/project 9.png" width="370"alt=""></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 1.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 2.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 3.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 4.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 5.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 6.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 7.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 8.png" width="370" alt="photo"></a></li>
+      <li class="project-list__item"><a href="#"><img src="project 9.png" width="370"alt="photo"></a></li>
         </ul>
       </section>
 </main>
   <footer class="site-footer"> 
-      <a href="./index.html"><img src="./images/WebStudio.svg" alt="WebStudio Logo"></a>
+      <a href="./index.html"><img src="WebStudio.svg" alt="WebStudio Logo"></a>
    <ul class="list">
   <li><a class="link" href="https://maps.app.goo.gl/42FeBoory7JgVYwk7">Velyka Vasylkivska</a></li> 
   <li><a class="link" href="tel:+380111111111">+380111111111</a> </li>
