--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <header class="header-info">
-    <a class="site-logo" href="./index.html"><img src="./images/WebStudio.svg" alt="WebStudio logo"></a>
+    <a class="site-logo" href="./index.html"><img src="WebStudio.svg" alt="WebStudio logo"></a>
   <nav>
     <ul class="site-navigation list">
         <li><a class="link" href="#">Contacts</a></li>
